add fonctionnal test
